--- a/preamble.tex
+++ b/preamble.tex
@@ -23,7 +23,8 @@
 ruled,
 %linesnumbered,
 vlined]{algorithm2e}
-\usepackage{rotating}
+\usepackage{pdflscape}
+\usepackage{afterpage}
 
 %shortfall and deficit
 \newcommand{\short}{\operatorname{short}}
