--- a/aip.tex
+++ b/aip.tex
@@ -42,7 +42,10 @@ TO DO LIST:
  \pedro[inline]{This is now done, but I'm sure the proof can be improved.}
  \item[$\Box$] Figure out how to effectively compute the integral closure of a monomial ideal in \emph{Macaulay2}, or otherwise figure out how to address computability in \Cref{computibility of W: R}.
  \item[$\Box$] Produce examples describing $\ideala^{[\lambda]}$.  Candidates include our running example, and taking $\idealm^d$, and removing generators close to the axes.
- \pedro[inline]{Working on it\ldots}
+ \pedro[inline]{
+    I included a homogeneous but not $\idealm$-primary example (\Cref{ex: new homogeneous example}).
+    If you guys have any suggestions of examples to be added or to replace this one---maybe something less random; something with some mathematical meaning to you---please let me know.
+ }
  \item[$\Box$] A $\kk$-generic hypersurface with support $x^{\vv{a}_1}, \ldots, x^{\vv{a}_n}$ will refer to any linear combination of these monomials $g = z_1 x^{\vv{a}_1} + \cdots + z_n x^{\vv{a}_n}$, which may be thought of as an element of either $\kk[z][x]$ or $\kk(z)[x]$.  If $S$ denotes either of these rings, then Theorem 5.3/Corollary 5.7 in Frobenius Powers implies that $\tau(f^t) = \ideala^{[t]} S$.  Thus, we have the following result:  \emph{If the supporting monomials are fixed beforehand, and $p \gg 0$, then any the test ideals of any $\kk$-generic hypersurface, where $\kk$ is a field of characteristic $p$, with those supporting exponents are well-behaved and can be described explicitly}.
   \emily[inline]{I put a draft statement/proof as \Cref{generic-test-ideals-main: T}.}
  \item[$\Box$] Reduction to prime characteristic:  Consider a field $\mathsf{L}$ of characteristic zero, and an $\mathsf{L}$-generic hypersurface $g$ with support $x^{\vv{a}_1}, \ldots, x^{\vv{a}_n}$.  If we consider the ambient ring of $g$ to be $\kk[z][x]$, then $g$ is supported by $\ZZ$, and so $g \bmod p \in (\ZZ/p\ZZ)[z][x]$ is generic, in the same sense, for all $p$ We then understand its test ideals for $p \gg 0$, and invoking \Cref{important-special: P} will allow us to settle the big conjecture relating test ideals and multiplier ideals for generic hypersurfaces.
@@ -3237,7 +3240,7 @@ where $\ideald_\vv{u}$ denotes the diagonal ideal associated to the positive poi
    \clearpage% Flush earlier floats (otherwise order might not be correct)
     \thispagestyle{empty}% empty page style (?)      
    \begin{table}
-   \begin{center} 
+   \centering
       \begingroup
       \setlength{\tabcolsep}{8pt} % Default value: 6pt
       \renewcommand{\arraystretch}{1.4} % Default value: 1
@@ -3276,7 +3279,6 @@ where $\ideald_\vv{u}$ denotes the diagonal ideal associated to the positive poi
         \bottomrule
       \end{tabular}
       \endgroup
-   \end{center}
    \caption{Frobenius powers for \Cref{ex: ft.6}}
    \label{table: main example}
 \end{table}
