--- a/aip.tex
+++ b/aip.tex
@@ -3408,10 +3408,10 @@ where $\ideald_\vv{u}$ denotes the diagonal ideal associated to the positive poi
 
 \begin{example}
    \label{ex: new homogeneous example}
-   Let $\ideala \subseteq \kk[x,y,z]$, where $\kk$ is a field of positive characteristic $p$, be the monomial ideal associated with the matrix $\matA$ in \Cref{ex: new example}.
+   Let $\kk$ be a field of positive characteristic $p$, and let $\ideala \subseteq \kk[x,y,z]$ be the monomial ideal associated with the matrix $\matA$ in \Cref{ex: new example}.
    We have computed the Frobenius powers $\ideala^{[t]}$ for $t \in [0,1)$, when $p$ is sufficiently large and congruent to $11$ modulo a universal denominator for $\matA$.
-   There are $\num{3742}$ critical exponents in that interval, of which $47$ do not depend on $p$.
-   Some of those critical exponents are a lot more complex than the ones shown so far.
+   There are $\num{3742}$ critical exponents in that interval, of which only $47$ do not depend on $p$.
+   Some of those critical exponents are far more complex than the ones shown in the previous examples.
    For example, if $\ideald = \ideal{x^{10},y^9,z^{13}}$, then
    \begin{align*}
      \crit(\ideala,\ideald) = &\frac{\num{4215}}{\num{12851}}-\frac{\num{217173}}{\num{9933823}p} -\frac{\num{2475}}{\num{681013}p^2}-\frac{\num{1848}}{\num{681013}p^3}-\frac{\num{5181}}{\num{681013}p^4}-\frac{\num{1155}}{\num{681013}p^5}\\
