--- a/preamble.tex
+++ b/preamble.tex
@@ -216,7 +216,9 @@ vlined]{algorithm2e}
 \newcommand{\muCool}{$\mu$-uniform\xspace}
 \newcommand{\nuCool}{$\nu$-uniform\xspace}
 \newcommand{\mustata}{Musta{\c{t}}\u{a}\xspace}
-
+\newcommand{\compatible}{compatible}
+\newcommand{\smallcompatible}{small compatible}
+\newcommand{\verysmallcompatible}{very small compatible}
 
 %notes
 \usepackage[textwidth=3.3 cm,textsize=small,shadow
