Hotrodded Prop 6.5 and did some reorganization around that area.

--- a/preamble.tex
+++ b/preamble.tex
@@ -156,6 +156,8 @@ vlined]{algorithm2e}
 \newcommand{\M}{\mathcal{M}}
 \renewcommand{\O}{\mathcal{O}}
 \renewcommand{\L}{\mathcal{L}}
+\newcommand{\G}{\mathcal{G}}
+\renewcommand{\H}{\mathcal{H}}
 \newcommand{\Z}{\mathcal{Z}}
 
 % newly-defined commands
